[gd_scene load_steps=4 format=3 uid="uid://d0uje33v2vd7h"]

[ext_resource type="Script" path="res://Abilities/Laser.gd" id="1_vfllg"]
[ext_resource type="Texture2D" uid="uid://ds4fob85uvsk4" path="res://icon.svg" id="2_2rgcj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lf3np"]
size = Vector2(20, 259)

[node name="Laser" type="Node2D"]
script = ExtResource("1_vfllg")

[node name="Line2d" type="Line2D" parent="."]
points = PackedVector2Array(0, 0, 0, -250)
width = 0.0
default_color = Color(1, 0, 0.0980392, 1)

[node name="LaserArea" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="LaserArea"]
position = Vector2(0, -129.5)
scale = Vector2(1e-05, 1)
shape = SubResource("RectangleShape2D_lf3np")

[node name="HoldTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Icon" type="Sprite2D" parent="."]
modulate = Color(1, 0.301961, 0.192157, 1)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_2rgcj")

[node name="IconArea" type="Area2D" parent="."]

[node name="CollisionShape2d" type="CollisionShape2D" parent="IconArea"]
position = Vector2(0, -129.5)
scale = Vector2(1e-05, 1)
shape = SubResource("RectangleShape2D_lf3np")

[connection signal="body_entered" from="LaserArea" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="HoldTimer" to="." method="_on_hold_timer_timeout"]
[connection signal="body_entered" from="IconArea" to="." method="_on_icon_area_body_entered"]
